Fix for #3145 (improved contrast for epub reader headline)

--- a/cps/static/css/epub_themes.css
+++ b/cps/static/css/epub_themes.css
@@ -15,5 +15,5 @@
 
 .blackTheme {
 	background: #000;
-	color: #fff
+	color: #fff;
 }
